Fixed bug #50829 (php.ini directive pdo_mysql.default_socket is ignored)